# pawn-templates

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  templates.inc  test.pwn
src/: lib.rs  plugin.rs
test/: crashinfo.txt
test/scriptfiles/: file.txt
