[package]
name = "pawn-templates"
version = "0.1.0"
authors = ["Southclaws <hello@southcla.ws>"]

[lib]
name = "pawn_templates"
crate-type = ["dylib"]

[dependencies]
samp = { version = "0.1.2", features = ["encoding"] }
liquid = "0.18"
log = "0.4.6"
fern = "0.5.7"

[features]
default = ["nightly"]
nightly = []
